--- a/styles.css
+++ b/styles.css
@@ -44,21 +44,6 @@ body {
             flex-direction: column;
             cursor: pointer;
         }
-        .btn-primary, .btn-archive, .btn-resume {
-            color: #00ffff;
-            font-weight: 600;
-            font-size: 16px;
-            border: 2px solid #00ffff;
-            background: #101010;
-            padding: 0.5em 1em;
-            cursor: pointer;
-            overflow: hidden;
-            position: relative;
-            outline: none;
-            -webkit-transition: 1.2s;
-            transition: 1.2s;
-            z-index: 2;
-        }
 
         .garren a{
                 position: relative;
@@ -132,7 +117,7 @@ body {
             webkit-animation: scale-up 1.2s forwards;
             animation: scale-up 1.2s forwars;
         }
-        .round .round-3 {
+        .round {
             border-radius: 50%;
             background-color: #00ffff;
             position: absolute;
@@ -201,12 +186,12 @@ body {
             backdrop-filter: blur(5px);
             padding: 2rem;
             border-radius: 8px;
-            background: rgba(255, 255, 255, 0.9); /* Lighter background for container */
-            margin-top: 100px; /* Added margin to account for fixed navbar */
+            background: black;
+            margin-top: 100px; 
         }
 
         footer {
-            background-color: rgba(0, 0, 0, 0.8); /* Dark footer for better contrast */
+            background-color: rgba(0, 0, 0, 0.8);
             padding: 1rem 0;
             text-align: center;
         }
@@ -253,7 +238,6 @@ body {
             color: #afafaf;
         }
 
-        /* Media queries for responsive design */
         @media (max-width: 768px) {
             .burger {
                 display: flex;
@@ -268,3 +252,92 @@ body {
                 display: flex;
             }
         }
+        .wrap {
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+          }
+          
+          .button {
+            min-width: 300px;
+            min-height: 60px;
+            display: inline-flex;
+            font-family: 'Nunito', sans-serif;
+            font-size: 22px;
+            align-items: center;
+            justify-content: center;
+            text-transform: uppercase;
+            text-align: center;
+            letter-spacing: 1.3px;
+            font-weight: 700;
+            color: #313133;
+            background: #4FD1C5;
+            background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+            border: none;
+            border-radius: 1000px;
+            box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+            transition: all 0.3s ease-in-out 0s;
+            cursor: pointer;
+            outline: none;
+            position: relative;
+            padding: 10px;
+            }
+          
+          .button::before {
+            content: '';
+            border-radius: 1000px;
+            min-width: calc(300px + 12px);
+            min-height: calc(60px + 12px);
+            border: 6px solid #00FFCB;
+            box-shadow: 0 0 60px rgba(0,255,203,.64);
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            opacity: 0;
+            transition: all .3s ease-in-out 0s;
+          }
+          
+          .button:hover, 
+          .button:focus {
+            color: #313133;
+            transform: translateY(-6px);
+          }
+          
+          .button:hover::before, 
+          .button:focus::before {
+            opacity: 1;
+          }
+          
+          .button::after {
+            content: '';
+            width: 30px; height: 30px;
+            border-radius: 100%;
+            border: 6px solid #00FFCB;
+            position: absolute;
+            z-index: -1;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            animation: ring 1.5s infinite;
+          }
+          
+          .button:hover::after, 
+          .button:focus::after {
+            animation: none;
+            display: none;
+          }
+          
+          @keyframes ring {
+            0% {
+              width: 30px;
+              height: 30px;
+              opacity: 1;
+            }
+            100% {
+              width: 300px;
+              height: 300px;
+              opacity: 0;
+            }
+          }
