--- a/styles.css
+++ b/styles.css
@@ -7,339 +7,344 @@ body {
     overflow-x: hidden; /* Hide the horizontal scrollbar */
 }
 
-        span {
-            color: #00ffff;
-        }
+span {
+    color: #00ffff;
+}
 
-        header {
-            background-color: rgba(0, 0, 0, 0.8); 
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            transition: top 0.3s ease-in-out;
-        }
+header {
+    background-color: rgba(0, 0, 0, 0.8); 
+    position: fixed;
+    width: 100%;
+    top: 0;
+    z-index: 1000;
+    transition: top 0.3s ease-in-out;
+}
 
-        header.hidden {
-            top: -80px; 
-        }
+header.hidden {
+    top: -80px; 
+}
 
-        nav {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 2rem;
-            backdrop-filter: blur(5px); 
-        }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
+    backdrop-filter: blur(5px); 
+}
 
-        nav a {
-            color: #ffeb3b; 
-            transition: color 0.3s;
-        }
+nav a {
+    color: #ffeb3b; 
+    transition: color 0.3s;
+}
 
-        nav a:hover {
-            color: #fff; 
-        }
+nav a:hover {
+    color: #fff; 
+}
 
-        .burger {
-            display: none;
-            flex-direction: column;
-            cursor: pointer;
-        }
+.burger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
 
-        .garren a{
-                position: relative;
-                color: var(--clr);
-                background: var(--clr);
-                text-decoration; none;
-                text-transform; uppercase;
-                letter-spacing: 0.1em;
-                font-weight: 400;
-                padding: 10px 30px;
-        }
+.garren a {
+    position: relative;
+    color: var(--clr);
+    background: var(--clr);
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: 400;
+    padding: 10px 30px;
+}
 
-        .garren a:hover {
-            background: var(--clr);
-            box-shadow: 0 0 35px var(--clr);
-        }
+.garren a:hover {
+    background: var(--clr);
+    box-shadow: 0 0 35px var(--clr);
+}
 
-        .garren a:before {
-            content: '';
-            position: absolute;
-            inset: 2px;
-            background: black;
-        }
+.garren a:before {
+    content: '';
+    position: absolute;
+    inset: 2px;
+    background: black;
+}
 
-        .garren a span {
-            position: relative;
-            z-index: 1;
-        }
+.garren a span {
+    position: relative;
+    z-index: 1;
+}
 
-        .garren a i {
-            position: absolute;
-            inset: 0;
-            display: block;
-        }
+.garren a i {
+    position: absolute;
+    inset: 0;
+    display: block;
+}
 
-        .garren a i::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 80%;
-            width: 10px;
-            height: 4px;
-            background: black;
-            transform: translateX(-50%) skewX(325deg);
-            transition: 0.5s;
-        }
+.garren a i::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 80%;
+    width: 10px;
+    height: 4px;
+    background: black;
+    transform: translateX(-50%) skewX(325deg);
+    transition: 0.5s;
+}
 
-        .garren a:hover i::before {
-            width: 20px;
-            left: 20%;
-        }
+.garren a:hover i::before {
+    width: 20px;
+    left: 20%;
+}
 
-        .garren a i::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 20%;
-            width: 10px;
-            height: 4px;
-            background: black;
-            transform: translateX(-50%) skewX(325deg);
-            transition: 0.5s;
-        }
+.garren a i::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 20%;
+    width: 10px;
+    height: 4px;
+    background: black;
+    transform: translateX(-50%) skewX(325deg);
+    transition: 0.5s;
+}
 
-        .garren a:hover i::after {
-            width: 20px;
-            left: 80%;
-        }
+.garren a:hover i::after {
+    width: 20px;
+    left: 80%;
+}
 
-        .animate, .round {
-            webkit-animation: scale-up 1.2s forwards;
-            animation: scale-up 1.2s forwars;
-        }
-        .round {
-            border-radius: 50%;
-            background-color: #00ffff;
-            position: absolute;
-            top: 5px;
-            left: 10px;
-            z-index: -1;
-            -webkit-animation: scale-down 1.2s forwards;
-            animation: scale-down 1.2s forwards;
-        }
+.animate, .round {
+    -webkit-animation: scale-up 1.2s forwards;
+    animation: scale-up 1.2s forwards;
+}
 
-        .burger div {
-            width: 25px;
-            height: 3px;
-            background-color: #ffeb3b;
-            margin: 4px;
-            transition: all 0.3s ease;
-        }
+.round {
+    border-radius: 50%;
+    background-color: #00ffff;
+    position: absolute;
+    top: 5px;
+    left: 10px;
+    z-index: -1;
+    -webkit-animation: scale-down 1.2s forwards;
+    animation: scale-down 1.2s forwards;
+}
 
-        .nav-links {
-            display: flex;
-            align-items: center;
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: #ffeb3b;
+    margin: 4px;
+    transition: all 0.3s ease;
+}
 
-        .nav-links li {
-            margin-left: 1rem;
-        }
+.nav-links {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
 
-        .nav-links a {
-            text-decoration: none;
-            font-weight: bold;
-        }
+.nav-links li {
+    margin-left: 1rem;
+}
 
-        .nav-links.active {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            backdrop-filter: blur(5px);
-            padding: 1rem 0;
-        }
+.nav-links a {
+    text-decoration: none;
+    font-weight: bold;
+}
 
-        .nav-links li {
-            margin: 1rem 0;
-            text-align: center;
-        }
+.nav-links.active {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(5px);
+    padding: 1rem 0;
+}
 
-        .burger.toggle .line1 {
-            transform: rotate(-45deg) translate(-5px, 6px);
-        }
+.nav-links li {
+    margin: 1rem 0;
+    text-align: center;
+}
 
-        .burger.toggle .line2 {
-            opacity: 0;
-        }
+.burger.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+}
 
-        .burger.toggle .line3 {
-            transform: rotate(45deg) translate(-5px, -6px);
-        }
+.burger.toggle .line2 {
+    opacity: 0;
+}
 
-        .container {
-            backdrop-filter: blur(5px);
-            padding: 2rem;
-            border-radius: 8px;
-            background: black;
-            margin-top: 100px; 
-        }
+.burger.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+}
 
-        footer {
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 1rem 0;
-            text-align: center;
-        }
+.container {
+    backdrop-filter: blur(5px);
+    padding: 2rem;
+    border-radius: 8px;
+    background: black;
+    margin-top: 100px; 
+}
 
-        .fade-in {
-            animation: fadeIn 2s ease-in-out;
-        }
+footer {
+    background-color: rgba(0, 0, 0, 0.8);
+    padding: 1rem 0;
+    text-align: center;
+}
 
-        .social-icon {
-            transition: transform 0.3s, opacity 0.3s;
-        }
+.fade-in {
+    animation: fadeIn 2s ease-in-out;
+}
 
-        .social-icon:hover {
-            transform: scale(1.2);
-            opacity: 0.8; /* Fades the icon slightly on hover */
-        }
+.social-icon {
+    transition: transform 0.3s, opacity 0.3s;
+}
 
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
+.social-icon:hover {
+    transform: scale(1.2);
+    opacity: 0.8; /* Fades the icon slightly on hover */
+}
 
-        .typewriter h2 {
-            overflow: hidden;
-            border-right: .15em solid orange;
-            white-space: nowrap;
-            margin: 0 auto;
-            letter-spacing: .15em;
-            animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
-            color: #afafaf;
-        }
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
 
-        @keyframes typing {
-            from { width: 0 }
-            to { width: 100% }
-        }
+.typewriter h2 {
+    overflow: hidden;
+    border-right: .15em solid orange;
+    white-space: nowrap;
+    margin: 0 auto;
+    letter-spacing: .15em;
+    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+    color: #afafaf;
+}
 
-        @keyframes blink-caret {
-            from, to { border-color: transparent }
-            50% { border-color: orange; }
-        }
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
 
-        .copyright {
-            color: #afafaf;
-        }
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: orange; }
+}
 
-        @media (max-width: 768px) {
-            .burger {
-                display: flex;
-            }
-            .nav-links {
-                display: none;
-                flex-direction: column;
-                width: 100%;
-                text-align: center;
-            }
-            .nav-links.active {
-                display: flex;
-            }
-        }
-        .wrap {
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-          
-          .button {
-            min-width: 300px;
-            min-height: 60px;
-            display: inline-flex;
-            font-family: 'Nunito', sans-serif;
-            font-size: 22px;
-            align-items: center;
-            justify-content: center;
-            text-transform: uppercase;
-            text-align: center;
-            letter-spacing: 1.3px;
-            font-weight: 700;
-            color: #313133;
-            background: #4FD1C5;
-            background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
-            border: none;
-            border-radius: 1000px;
-            box-shadow: 12px 12px 24px rgba(79,209,197,.64);
-            transition: all 0.3s ease-in-out 0s;
-            cursor: pointer;
-            outline: none;
-            position: relative;
-            padding: 10px;
-            }
-          
-          .button::before {
-            content: '';
-            border-radius: 1000px;
-            min-width: calc(300px + 12px);
-            min-height: calc(60px + 12px);
-            border: 6px solid #00FFCB;
-            box-shadow: 0 0 60px rgba(0,255,203,.64);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 0;
-            transition: all .3s ease-in-out 0s;
-          }
-          
-          .button:hover, 
-          .button:focus {
-            color: #313133;
-            transform: translateY(-6px);
-          }
-          
-          .button:hover::before, 
-          .button:focus::before {
-            opacity: 1;
-          }
-          
-          .button::after {
-            content: '';
-            width: 30px; height: 30px;
-            border-radius: 100%;
-            border: 6px solid #00FFCB;
-            position: absolute;
-            z-index: -1;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            animation: ring 1.5s infinite;
-          }
-          
-          .button:hover::after, 
-          .button:focus::after {
-            animation: none;
-            display: none;
-          }
-          
-          @keyframes ring {
-            0% {
-              width: 30px;
-              height: 30px;
-              opacity: 1;
-            }
-            100% {
-              width: 300px;
-              height: 300px;
-              opacity: 0;
-            }
-          }
+.copyright {
+    color: #afafaf;
+}
+
+@media (max-width: 768px) {
+    .burger {
+        display: flex;
+    }
+
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    .nav-links.active {
+        display: flex;
+    }
+
+    .button {
+        min-width: 100%;
+        font-size: 18px;
+        padding: 15px;
+    }
+
+    .container {
+        margin-top: 50px;
+        padding: 1rem;
+    }
+
+    header {
+        padding: 0.5rem 1rem;
+    }
+
+    nav {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .garren a {
+        padding: 8px 20px;
+    }
+}
+
+.wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button {
+    min-width: 300px;
+    min-height: 60px;
+    display: inline-flex;
+    font-family: 'Nunito', sans-serif;
+    font-size: 22px;
+    align-items: center;
+    justify-content: center;
+    text-transform: uppercase;
+    text-align: center;
+    letter-spacing: 1.3px;
+    font-weight: 700;
+    color: #313133;
+    background: #4FD1C5;
+    background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+}
+
+.button::before {
+    content: '';
+    border-radius: 1000px;
+    min-width: calc(300px + 12px);
+    min-height: calc(60px + 12px);
+    border: 6px solid #00FFCB;
+    box-shadow: 0 0 60px rgba(0,255,203,.64);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    transform: translate(-50%, -50%);
+    transition: all 0.3s ease-in-out 0s;
+    animation: scaleIn 0.5s forwards 0.3s;
+    display: none;
+}
+
+.button:hover::before {
+    display: block;
+}
+
+.button:hover {
+    transform: translateY(-6px);
+    box-shadow: 12px 16px 24px rgba(79,209,197,.64);
+}
+
+@keyframes scaleIn {
+    from {
+        transform: translate(-50%, -50%) scale(0);
+    }
+    to {
+        transform: translate(-50%, -50%) scale(1);
+    }
+}
